--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "eslint-config-airbnb-standard": "^3.1.0"
   },
   "dependencies": {
+    "it-pipe": "^1.1.0",
     "libp2p": "^0.30.11",
+    "libp2p-floodsub": "^0.24.1",
+    "libp2p-gossipsub": "^0.8.0",
     "libp2p-mdns": "^0.15.0",
     "libp2p-mplex": "^0.10.2",
     "libp2p-noise": "^2.0.5",
-    "libp2p-tcp": "^0.15.3"
+    "libp2p-tcp": "^0.15.3",
+    "peer-info": "^0.17.5",
+    "pull-stream": "^3.6.14",
+    "streaming-iterables": "^5.0.4"
   }
 }
